--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
     "require": {
         "bennetgallein/angle-framework": "dev-master",
         "bennetgallein/bind-php-wrapper": "dev-master",
-        "simplon/mysql": "^2.2"
+        "simplon/mysql": "^2.2",
+      "ext-pdo": "*"
     },
     "autoload": {
         "psr-4": {
