--- a/config.json.example
+++ b/config.json.example
@@ -1,6 +1,10 @@
 {
-  "DB_HOST": "localhost",
-  "DB_USER": "bind",
-  "DB_PASSWORD": "bind-dashboard",
-  "DB": "bind-dashboard"
+    "APP_URL": "\/BIND-Dashboard\/",
+    "DB_HOST": "localhost",
+    "DB_USER": "bind",
+    "DB_PASSWORD": "bind-dashboard",
+    "DB": "bind-dashboard",
+    "BIND_HOST": "192.168.1.104",
+    "BIND_PORT": "5000",
+    "BIND_HTTPS": false
 }
